# regressions

./: LICENSE  README.md  pyproject.toml  setup.py
doc/: Makefile  bibliography.rst  conf.py  index.rst  introduction.rst  license.rst  make.bat  modules.rst  regressions.rst
examples/: kpls_example.py  kpls_sinc.py  sinc.py
regressions/: __init__.py  cls.py  fitstats.py  kernel_pls.py  kernels.py  mlr.py  pcr.py  pls1.py  pls2.py  pls_sb.py  press.py
regressions/pcr/: __init__.py
regressions/pls1/: __init__.py
